translate blog articles to english

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -68,7 +68,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts'
             was written in Node.js and hosted on Heroku,
           </li>
           <li>
-            I built a <a
+            I built <a
               href='https://web.archive.org/web/20230130022325/https://www.notnow.email/'
               target='_blank'>Notnow.email</a
             >, a low-tech service to help you read more, built with Node.js,
