--- a/src/components/FormattedDate.astro
+++ b/src/components/FormattedDate.astro
@@ -8,9 +8,9 @@ const { date } = Astro.props;
 
 <time datetime={date.toISOString()}>
 	{
-		date.toLocaleDateString('fr-FR', {
+		date.toLocaleDateString('en-US', {
 			year: 'numeric',
-			month: 'long',
+			month: 'short',
 			day: 'numeric',
 		})
 	}
