--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,8 +1,51 @@
 ---
+import BaseHead from '../components/BaseHead.astro'
+import Header from '../components/Header.astro'
+import Footer from '../components/Footer.astro'
 import ContactPage from '../components/react/Contact'
-import Layout from '../layouts/Contact.astro'
 ---
 
-<Layout title='Contact Me'>
-  <ContactPage />
-</Layout>
+<html lang='en'>
+  <head>
+    <BaseHead title='Contact me' />
+    <style>
+      main {
+        width: calc(100% - 2em);
+        max-width: 100%;
+        margin: 0;
+      }
+      .prose {
+        width: 720px;
+        max-width: calc(100% - 2em);
+        margin: auto;
+        padding: 1em;
+        color: rgb(var(--gray-dark));
+      }
+      .title {
+        margin-bottom: 1em;
+        padding: 1em 0;
+        text-align: center;
+        line-height: 1;
+      }
+      .title h1 {
+        margin: 0 0 0.5em 0;
+      }
+    </style>
+  </head>
+
+  <body>
+    <Header />
+    <main>
+      <article>
+        <div class='prose'>
+          <div class='title'>
+            <h1>{'Contact me'}</h1>
+            <hr />
+          </div>
+          <ContactPage />
+        </div>
+      </article>
+    </main>
+    <Footer />
+  </body>
+</html>
