--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import BaseHead from '../components/BaseHead.astro'
 import Header from '../components/Header.astro'
 import Footer from '../components/Footer.astro'
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts'
+import { HireMe } from '../components/react/HireMe'
 ---
 
 <!doctype html>
@@ -94,6 +95,9 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts'
           </li>
         </ul>
       </p>
+      <p>
+      <HireMe />
+    </p>
     </main>
     <Footer />
   </body>
