--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,6 @@
 ---
+import { GoogleAnalytics } from 'astro-google-analytics';
+
 import BaseHead from '../components/BaseHead.astro'
 import Header from '../components/Header.astro'
 import Footer from '../components/Footer.astro'
@@ -10,6 +12,7 @@ import { HireMe } from '../components/react/HireMe'
 <html lang='en'>
   <head>
     <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+    <GoogleAnalytics id="G-54XFLNZ0ZK" />
   </head>
   <body>
     <Header />
